# IronOps

./: .gitignore  Makefile  README.md  manifest.yaml  pyproject.toml
.dev/reflect/uc1-ironops-builder-prerun/: REPORT.md  coverage-map.yaml  evidence-validator-report.yaml  return-contract.yaml
.dev/reflect/uc1-ironops-builder-prerun/artifacts/: input-snapshot.yaml  tier_decision.yaml
.dev/reflect/uc1-ironops-builder-prerun/reviewer-cards/: t1-card.md  t2-reviewer-a-card.md  t2-reviewer-b-card.md
.dev/releases/1.0/0.1/: SPEC_IRONOPS_DEVOPS_PLUGIN.md
.dev/tasks/to-do/TASK-RESEARCH-20260527-150111-ironops-plugin-aggregator/: DECISION-BRIEF-ironops-aggregator.md
.dev/tasks/to-do/TASK-RF-20260527-153758-ironops-builder/: TASK-RF-20260527-153758-ironops-builder.md  (+1 more)
.github/workflows/: build-publish.yml  test.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  MANIFEST_AUTHORING.md  MARKETPLACE_BOOTSTRAP.md
src/ironops/: __init__.py  cli.py  errors.py  manifest.py  metadata.py  pipeline.py  publish.py  render.py  sources.py  validate.py
tests/: __init__.py  conftest.py  test_inventory.md
tests/cli/: __init__.py  test_cli.py
tests/fixtures/ironclaude-snapshot/: README.md
tests/fixtures/manifests/: bad-empty-imports.yaml  bad-hook-kind.yaml  bad-orphan-command.yaml  bad-path-escape.yaml  bad-schema.yaml  bad-self-overwrite.yaml  good.yaml
tests/integration/: __init__.py  test_atomicity.py  test_golden_output.py  test_negative.py  test_pipeline.py
tests/unit/: __init__.py  test_errors.py  test_manifest.py  test_metadata.py  test_render.py  test_sources.py
(+39 files in other folders)
