[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironops"
version = "0.1.0"
description = "IronOps DevOps Claude Plugin builder — curated build-time aggregator."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "click>=8.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ironops = "ironops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ironops"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [".dev/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# N818 (Error suffix on Exception names) is ignored because the BuilderError
# subclass names are spec-mandated (see SPEC §NFR-7 categorical codes —
# `ManifestInvalid`, `SelfOverwrite`, etc.). Renaming would diverge from the
# spec's authoritative naming.
ignore = ["E501", "N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["src/ironops"]
